wip/infra-1527-rw-web-dns/infrastructure/risingwave-routes/virtualservice-overview.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: risingwave-overview
  namespace: risingwave
  labels:
    app.kubernetes.io/managed-by: flux
    team: risingwave
  annotations:
    external-dns.alpha.kubernetes.io/target: "10.10.82.21,10.10.82.22,10.10.82.26,10.10.82.27,10.10.82.28,10.10.82.178,10.10.82.180"
spec:
  gateways:
    - istio-ingress/shared-http
  hosts:
    - risingwave-overview.usxpress.io
  http:
    - route:
        - destination:
            host: risingwave-meta.risingwave.svc.cluster.local
            port:
              number: 5691
